# barongs.ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.openwebui.yml  docker-compose.yml  progress.md  pyproject.toml
.github/workflows/: ci.yml
deploy/aws/: samconfig.toml  template.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  service.yaml
docs/: ARCHITECTURE.md  orchestration_walkthrough.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ChatInput.tsx  ChunkViewer.tsx  DisambiguationDialog.tsx  DocumentUpload.tsx  KnowledgeBase.tsx  LoginPage.tsx  MessageActions.tsx  MessageBubble.tsx  MessageList.tsx  OutlineEditor.tsx  PageTransition.tsx  RAGModeToggle.tsx  ScrollToBottom.tsx  SearchSettingsPanel.tsx  SettingsModal.tsx  Sidebar.tsx  SkeletonLoader.tsx  SourceCards.tsx  SourcePanel.tsx  StatusIndicator.tsx  WelcomeScreen.tsx  icons.tsx
frontend/src/hooks/: useAuth.ts  useConversationStore.ts  useConversations.ts  useFocusTrap.ts  useKeyboardShortcuts.ts  useModels.ts  useProjects.ts  useRAG.ts  useSearchSettings.ts  useStreamSearch.ts  useTheme.ts
frontend/src/lib/: api.ts  auth.ts  chatComposer.test.ts  chatComposer.ts  dates.ts  format.ts  markdown.ts  searchSettings.ts  storage.ts
nginx/: nginx.conf
src/: main.py
src/applications/: CLAUDE.md
src/applications/deep_search/: config.py  entity_grounding.py  main.py  query_utils.py  routes.py  session_store.py  streaming_pipeline.py
src/applications/example_app/: CLAUDE.md  config.py  lambda_handler.py  main.py  routes.py
src/applications/search_agent/: CLAUDE.md  config.py  jobs.py  lambda_handler.py  main.py  rag_routes.py  routes.py  streaming_pipeline.py  worker.py
src/core/: CLAUDE.md  __init__.py
src/core/auth/: jwt.py  password.py  routes.py  user_repository.py
src/core/http/: __init__.py  client.py
src/core/interfaces/: __init__.py  agent.py  memory.py  orchestrator.py  tool.py
src/core/jobs/: __init__.py  models.py  router.py  service.py  worker.py
src/core/llm/: __init__.py  base.py  errors.py  models.py  registry.py
src/core/mcp/: __init__.py  client.py  skills_loader.py  tool_adapter.py
src/core/memory/: __init__.py  redis.py
src/core/middleware/: auth.py  circuit_breaker.py  logging.py  rate_limit_middleware.py  rate_limiter.py  timeout.py
src/core/models/: __init__.py  auth.py  config.py  context.py  messages.py  results.py  user.py
src/core/orchestrator/: __init__.py
src/core/rag/: __init__.py  chunker.py  models.py  persistent_retriever.py  retriever.py  tool.py
src/core/server/: dependencies.py  diagnostics.py  exception_handlers.py  factory.py  health.py  ui_router.py
src/core/tools/: __init__.py
src/core/utils/: async_helpers.py  sanitize.py
tests/: CLAUDE.md  conftest.py
tests/applications/deep_search/: test_academic_researcher.py  test_academic_search.py  test_code_execution.py  test_config.py  test_data_analyst.py  test_deep_crawler.py  test_deep_search_settings.py  test_deep_synthesizer.py  test_deep_web_researcher.py  test_entity_grounding.py  test_fact_checker.py  test_integration.py  test_interactive_outline.py  test_knowledge_graph.py  test_main.py  test_models.py  test_reflection.py  test_research_modes.py  test_research_planner.py  test_routes.py  test_source_scorer.py  test_streaming_pipeline.py
tests/applications/example_app/: test_echo_agent.py  test_routes.py  test_web_search_tool.py
tests/applications/search_agent/: test_memory.py  test_no_cross_app_imports.py  test_query_analyzer.py  test_rag_routes.py  test_rag_settings.py  test_rag_synthesizer.py  test_redis_conversation_memory.py  test_routes.py  test_search_path_agent.py  test_search_pipeline.py  test_search_settings.py  test_search_tools.py  test_synthesizer.py  test_web_researcher.py  test_web_researcher_timeout.py
tests/core/: test_auth_multikey.py  test_circuit_breaker.py  test_config_validation.py  test_diagnostics.py  test_exception_handlers.py  test_factory.py  test_health_enhanced.py  test_http_client_pool.py  test_interfaces.py  test_llm.py  test_llm_errors.py  test_llm_multimodal.py  test_llm_resilience.py  test_mcp.py  test_models.py  test_models_user.py  test_orchestrator.py  test_pipeline_metadata_strategy.py  test_rate_limit_middleware.py  test_redis_memory.py  test_redis_rate_limiter.py  test_research_dag_strategy.py  test_timeout.py
tests/core/auth/: test_jwt.py  test_password.py  test_routes.py  test_unified_auth.py  test_user_repository.py
tests/core/jobs/: test_job_models.py  test_job_service.py
tests/core/rag/: test_interfaces.py  test_models.py  test_persistent_retriever.py  test_retriever.py  test_tool.py
tests/core/test_openai_compat/: test_auth.py  test_converters.py  test_models.py  (+2 more)
(+102 files in other folders)
